--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,22 @@
 @import url('izitoast/dist/css/iziToast.css');
 
+:root {
+  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
 ul {
   margin-top: 0;
   margin-bottom: 0;
@@ -17,7 +34,7 @@ img {
 }
 
 .link {
-  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  background-image: linear-gradient(144deg, #20028c, #c1195c 50%, #0f0a58);
   border-radius: 8px;
   color: #ffffff;
   font-size: 20px;
@@ -27,8 +44,7 @@ img {
   cursor: pointer;
 }
 
-/* Form styles */
-.page-form {
+.search-form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +66,6 @@ img {
 }
 
 .form-input:hover {
-  /* background: hsl(189, 67%, 94%); */
   border: 1px solid #4e75ff;
 }
 
@@ -100,7 +115,6 @@ input::placeholder {
   color: #808080;
 }
 
-/* Gallery styles */
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -172,14 +186,13 @@ input::placeholder {
   transform: scale(1.03);
 }
 
-/* Loader styles */
 .loader {
   width: 48px;
   height: 48px;
   border-radius: 50%;
   display: block;
   position: relative;
-  background: linear-gradient(0deg, rgba(0, 255, 136, 0.2) 33%, #0078bd 100%);
+  background: linear-gradient(0deg, rgba(31, 0, 152, 0.2) 33%, #0078bd 100%);
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
   margin-left: auto;
